# rpg-ng

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md
.github/workflows/: build_ship.yml
cmake/: FindJansson.cmake
src/: config.c  config.h  entity.c  entity.h  getopt.h  htable.c  htable.h  init.c  init.h  log.c  log.h  main.c  map.h  run.c  run.h  script.c  script.h  util.c  util.h  win_compat.h  window.c  window.h
src/component/: character.h  component.c  component.h  dialogue.c  dialogue.h  dialogue_widget.h  inventory.c  inventory.h  sprite.c  sprite.h  transform.c  transform.h
